# openmw-fork

./: AUTHORS.md  CMakeLists.txt  README.md
apps/esmtool/: dumpers.hpp  esmtool.cpp  labels.cpp  printers.hpp  record.cpp  record.hpp  simport.hpp
apps/launcher/: maindialog.cpp
apps/opencs/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp
apps/opencs/model/doc/: document.cpp
apps/opencs/model/filter/: parser.hpp
apps/opencs/model/world/: columns.cpp  defaultgmsts.cpp  defaultgmsts.hpp  idtableproxymodel.cpp  idtableproxymodel.hpp
apps/opencs/view/filter/: editwidget.cpp  editwidget.hpp  filterbox.cpp  filterbox.hpp  recordfilterbox.cpp  recordfilterbox.hpp
apps/opencs/view/world/: regionmap.cpp  table.cpp  table.hpp  tablesubview.cpp
apps/openmw/: CMakeLists.txt  engine.cpp  main.cpp  main.hpp
apps/openmw/mwbase/: inputmanager.hpp  soundmanager.hpp  world.hpp
apps/openmw/mwclass/: apparatus.cpp  armor.cpp  armor.hpp  book.cpp  book.hpp  clothing.cpp  clothing.hpp  ingredient.cpp  light.cpp  lockpick.cpp  misc.cpp  potion.cpp  probe.cpp  repair.cpp  weapon.cpp  weapon.hpp
apps/openmw/mwgui/: charactercreation.cpp  charactercreation.hpp  container.cpp  dialogue.cpp  settingswindow.cpp  settingswindow.hpp
apps/openmw/mwinput/: inputmanagerimp.cpp  inputmanagerimp.hpp
apps/openmw/mwmechanics/: actors.cpp  character.cpp  enchanting.cpp  mechanicsmanagerimp.cpp  npcstats.cpp  npcstats.hpp  spellcasting.cpp  spellpriority.cpp
apps/openmw/mwrender/: renderingmanager.cpp  ripplesimulation.cpp
apps/openmw/mwscript/: animationextensions.cpp  extensions.cpp  globalscripts.cpp  globalscripts.hpp  guiextensions.cpp  interpretercontext.cpp  miscextensions.cpp  soundextensions.cpp  transformationextensions.cpp  vmoextensions.cpp  vmoextensions.hpp
apps/openmw/mwscript/docs/: vmformat.txt
apps/openmw/mwsound/: soundmanagerimp.cpp  soundmanagerimp.hpp  vmo_generator.cpp  vmo_generator.hpp
apps/openmw/mwstate/: statemanagerimp.cpp
apps/openmw/mwworld/: class.cpp  class.hpp  inventorystore.cpp  projectilemanager.cpp  scene.cpp  worldimp.cpp  worldimp.hpp
components/: CMakeLists.txt
components/compiler/: extensions0.cpp  extensions0.hpp  opcodes.hpp
components/debug/: debugging.cpp
components/esm/: loadmgef.cpp  loadmgef.hpp
components/nifosg/: controller.cpp  controller.hpp  nifloader.cpp
components/sceneutil/: optimizer.hpp
components/sdlutil/: MGCompat.hpp  events.hpp  sdlinputwrapper.cpp  sdlinputwrapper.hpp
components/version/: version.cpp  version.hpp
files/: settings-default.cfg
files/mygui/: openmw_settings_window.layout
more_fun/: 0_island.omwaddon  core_invtransfer.omwaddon  dos_island-en.omwaddon  dos_island-ru.omwaddon  ez_companions.omwaddon
rebalance/: ez_enchant.omwaddon  ez_gold.omwaddon  ez_magicka.omwaddon
tools/: .gitignore  morrowind_clot_ench_fix.c  morrowind_ref_scale_copy.cpp  mybuild.sh
